--- a/client/ecommerce/src/styles.css
+++ b/client/ecommerce/src/styles.css
@@ -1,2 +1,38 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
+
+
+body {
+    padding-top: 70px;
+    font-family: 'Fredoka One', cursive;
+}
+
+.navbar-header {
+    background-color: #3389FF;
+}
+
+.a-color {
+    color: #E7EFFF;
+}
+
+.titulo-lp {
+    font-family: 'Fredoka One', cursive;
+    font-size:8vw;
+    text-align: center;
+}
+
+.texto-lp {
+    font-family: 'Fredoka One', cursive;
+    text-align: center;
+}
+
+.texto {
+    font-size: 2vw;
+}
+
+.centrar {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
