api de usuarios

--- a/client/ecommerce/src/app/signup/signup.component.html
+++ b/client/ecommerce/src/app/signup/signup.component.html
@@ -40,7 +40,7 @@
                     <input type="file" class="custom-file-input" id="customFile">
                     <label class="custom-file-label" for="customFile" data-browse="Image">Choose File</label>
                 </div>
-                <button class="btn btn-primary">Login</button>
+                <button class="btn btn-primary">Submit</button>
             </form>
         </div>
         <div class="card-body">
