--- a/client/ecommerce/src/app/header/header.component.html
+++ b/client/ecommerce/src/app/header/header.component.html
@@ -1,4 +1,4 @@
 <nav class="navbar fixed-top navbar-header justify-content-end">
-    <a class="navbar-brand a-color" href="#" >Sign in <i class="fas fa-sign-in-alt"></i></a>
+    <a class="navbar-brand a-color" href="/login" >Sign in <i class="fas fa-sign-in-alt"></i></a>
 </nav>
   
