--- a/client/ecommerce/src/app/headerb/headerb.component.html
+++ b/client/ecommerce/src/app/headerb/headerb.component.html
@@ -5,10 +5,11 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="/feed">Products</a>
       <a class="nav-item nav-link" href="/myproducts">My Products</a>
       <a class="nav-item nav-link" href="/settings">Settings</a>
+      <a class="nav-item nav-link" href="/home" (click)="logOut()">Log out</a>
     </div>
   </div>
 </nav>
