--- a/client/ecommerce/src/app/signin/signin.component.html
+++ b/client/ecommerce/src/app/signin/signin.component.html
@@ -6,13 +6,13 @@
             <form action="">
                 <div class="form-group">
                     <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <input [(ngModel)]="USER.correo" name="correo" type="email" class="form-control" id="formCorreo" aria-describedby="emailHelp">
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
+                    <input [(ngModel)]="USER.contrasenia" name="password" type="password" class="form-control" id="formPass">
                 </div>
-                <button class="btn btn-primary">Login</button>
+                <button (click)="login()" class="btn btn-primary">Login</button>
             </form>
         </div>
         <div class="card-body">
@@ -20,3 +20,4 @@
         </div>
     </div>
 </div>
+ 
