--- a/client/ecommerce/src/app/product/product.component.html
+++ b/client/ecommerce/src/app/product/product.component.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-6">
-            <div class="card" style="width: 18rem; padding-top: 7px;">
+            <div class="card" style="width: 20rem; padding-top: 7px;">
                 <img src="{{producto.imagen}}" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">{{producto.nombre}}</h5>
@@ -12,20 +12,24 @@
                 </div>
             </div>
             <!--este es para añadir comentarios-->
-            <div style="width: 18rem; padding-top: 8px;">
+            <div style="width: 20rem; padding-top: 8px;">
                 <div class="card">
                     <div class="card-body">
                         <div class="form-group">
+                            <label for="newName">Title</label>
+                            <input [(ngModel)]="comentario.titulo" name="titulo" type="text" class="form-control" id="newName">
+                        </div>
+                        <div class="form-group">
                             <label for="taComentar">Comment</label>
-                            <textarea class="form-control" id="taComentar"></textarea>
+                            <textarea [(ngModel)]="comentario.descripcion" name="descripcion" class="form-control" id="taComentar"></textarea>
                         </div>
                         <form>
                             <div class="form-group">
                             <label for="formRate">Rate</label>
-                            <input type="range" class="form-control-range" id="formRate">
+                            <input [(ngModel)]="comentario.punteo" name="punteo" type="range" class="form-control-range" id="formRate">
                             </div>
                         </form>
-                        <button class="btn btn-info">Send</button>
+                        <button class="btn btn-info" (click)="postComentario()">Send</button>
                     </div>
                 </div>
             </div>
@@ -34,51 +38,21 @@
             <h1 class="subtitulo-lp">Comments</h1>
             <hr>
             <div class="row row-cols-1">
-                <div class="col" style="padding-top: 8px;">
+                <div class="col" style="padding-top: 8px;" *ngFor="let element of COMENTARIOS">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Comentario</h5>
-                            <p class="card-text">esto es un comentario.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col" style="padding-top: 8px;">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Comentario</h5>
-                            <p class="card-text">esto es un comentario.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col" style="padding-top: 8px;">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Comentario</h5>
-                            <p class="card-text">esto es un comentario.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col" style="padding-top: 8px;">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Comentario</h5>
-                            <p class="card-text">esto es un comentario.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col" style="padding-top: 8px;">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Comentario</h5>
-                            <p class="card-text">esto es un comentario.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col" style="padding-top: 8px;">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Comentario</h5>
-                            <p class="card-text">esto es un comentario.</p>
+                            <h5 class="card-title">{{element.autor}}: {{element.titulo}}</h5>
+                            <p class="card-text">{{element.punteo}} <span>%</span></p>
+                            <p class="card-text"><span><i class="fas fa-comment"></i></span> {{element.descripcion}}</p>
+                            <ul *ngIf="element.respuesta != null">
+                                <li>{{element.respuesta}}</li>
+                            </ul>
+                            <div class="form-group" *ngIf="esAutor == true && element.respuesta == null">
+                                <label for="newName">Answer</label>
+                                <input [(ngModel)]="comRespuesta.respuesta" name="titulo" type="text" class="form-control" id="newName">
+                            </div>
+                            <button class="btn btn-primary" *ngIf="esAutor == true && element.respuesta == null" (click)="putComentario(element.id_comentario)">submit</button>
+                            <button class="btn btn-warning" *ngIf="esAutor == true" (click)="deleteComentario(element.id_comentario)">delete</button>
                         </div>
                     </div>
                 </div>
