api de carrito con el detalle de productos integrado al frontend

--- a/client/ecommerce/src/app/addcar/addcar.component.html
+++ b/client/ecommerce/src/app/addcar/addcar.component.html
@@ -1,22 +1,36 @@
 <app-headerb></app-headerb>
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-6">
+        <div class="col-4">
             <div class="card" style="width: 18rem; padding-top: 7px;">
                 <img src="{{producto.imagen}}" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">{{producto.nombre}}</h5>
-                    <p class="card-text">{{producto.descripcion}}</p>
+                    <p class="card-text"><span>Price: </span>{{producto.descripcion}}</p>
                     <p class="card-text"><span>$ </span>{{producto.precio}}</p>
                     <p class="card-text">{{producto.cantidad}}<span> units</span></p>
-                    <button class="btn btn-info">add <i class="fas fa-shopping-cart"></i></button>
+                    
                     <button class="btn btn-dark" (click)="reseniaProducto()">review <i class="far fa-star"></i></button>
+                    <button class="btn btn-info" (click)="enviarDetalle()">add <i class="fas fa-shopping-cart"></i></button>
                 </div>
             </div>
         </div>
-        <div class="col-6">
+        <div class="col-8">
             <h1 class="subtitulo-lp">My car</h1>
             <hr>
+            <div class="row" *ngFor="let element of MI_CARRITO">
+                <div class="card w-75">
+                    <div class="card-body producto">
+                        <img src="{{element.imagen}}" alt="producto" style="border-radius: 50%">
+                        <address>
+                            Name: {{element.nombre}}
+
+                            Price: ${{element.precio}}
+                        </address>
+                    </div>
+                    <button class="btn btn-warning" (click)="borrarDetalle(element.id_detalle)">delete <i class="fas fa-minus-square"></i></button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
