--- a/client/ecommerce/src/app/feed/feed.component.html
+++ b/client/ecommerce/src/app/feed/feed.component.html
@@ -26,8 +26,8 @@
                             <img src="{{producto.imagen}}" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">{{producto.nombre}}</h5>
-                                <p class="card-text">{{producto.descripcion}}</p>
-                                <p class="card-text"><span>$ </span>{{producto.precio}}</p>
+                                <p class="card-text">Owner: {{producto.duenio}}</p>
+                                <p class="card-text"><span>Price: $</span>{{producto.precio}}</p>
                                 <p class="card-text">{{producto.cantidad}}<span> units</span></p>
                                 <button class="btn btn-info" (click)="seeProduct(producto)">view <i class="fas fa-eye"></i></button>
                             </div>
