componente de reportes y pagina de acceso restringido, denegar acceso a paginas

--- a/client/ecommerce/src/app/header/header.component.html
+++ b/client/ecommerce/src/app/header/header.component.html
@@ -1,4 +1,6 @@
 <nav class="navbar fixed-top navbar-header justify-content-end">
+    <a class="navbar-brand a-color" href="/feed" >Products <i class="fas fa-store"></i></a>
     <a class="navbar-brand a-color" href="/login" >Sign in <i class="fas fa-sign-in-alt"></i></a>
+    <a class="navbar-brand a-color" href="/signup" >Sign up <i class="fas fa-user-plus"></i></a>
 </nav>
   
