--- a/client/ecommerce/src/app/feed/feed.component.html
+++ b/client/ecommerce/src/app/feed/feed.component.html
@@ -1,4 +1,5 @@
-<app-headerb></app-headerb>
+<app-headerb *ngIf="login == true"></app-headerb>
+<app-header *ngIf="login == false"></app-header>
 <div class="container-fluid">
     <div class="row">
         <div class="col-4">
@@ -29,7 +30,7 @@
                                 <p class="card-text">Owner: {{producto.duenio}}</p>
                                 <p class="card-text"><span>Price: $</span>{{producto.precio}}</p>
                                 <p class="card-text">{{producto.cantidad}}<span> units</span></p>
-                                <button class="btn btn-info" (click)="seeProduct(producto)">view <i class="fas fa-eye"></i></button>
+                                <button *ngIf="login == true && usuario.tipo_usuario == 3" class="btn btn-info" (click)="seeProduct(producto)">view <i class="fas fa-eye"></i></button>
                             </div>
                         </div>
                     </div>
