--- a/client/ecommerce/src/app/headerb/headerb.component.html
+++ b/client/ecommerce/src/app/headerb/headerb.component.html
@@ -7,7 +7,9 @@
     <div class="navbar-nav">
       <a class="nav-item nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="/feed">Products</a>
-      <a class="nav-item nav-link" href="/myproducts">My Products</a>
+      <a class="nav-item nav-link" *ngIf="usuario.tipo_usuario != 1" href="/myproducts">My Products</a>
+      <a class="nav-item nav-link" *ngIf="usuario.tipo_usuario == 1" href="/users">Users</a>
+      <a class="nav-item nav-link" *ngIf="usuario.tipo_usuario == 1" href="/reports">Reports</a>
       <a class="nav-item nav-link" href="/settings">Settings</a>
       <a class="nav-item nav-link" href="/home" (click)="logOut()">Log out</a>
     </div>
